--- a/trunk/docs/usrdoc/qmcpack-u.tex
+++ b/trunk/docs/usrdoc/qmcpack-u.tex
@@ -15,13 +15,13 @@
 \urlstyle{same}
 %\definecolor{codebg}{gray}{0.80}
 %\newcommand{\icode}[1]{\textcolor{OliveGreen}{\texttt{#1}}}
-%\newcommand{\iconsole}[1]{\textcolor{RoyalBlue}{\texttt{#1}}}
+%\newcommand{\iterm}[1]{\textcolor{RoyalBlue}{\texttt{#1}}}
 \newcommand{\icode}[1]{\textcolor{OliveGreen}{\Verb|#1|}}
-\newcommand{\iconsole}[1]{\textcolor{RoyalBlue}{\Verb|#1|}}
+\newcommand{\iterm}[1]{\textcolor{RoyalBlue}{\Verb|#1|}}
 \newcommand{\codesrc}[1]{\VerbatimInput[frame=single,rulecolor=\color{black},formatcom=\color{OliveGreen},numbers=left]{#1}}
-\newcommand{\consolesrc}[1]{\VerbatimInput[frame=single,rulecolor=\color{black},formatcom=\color{RoyalBlue},numbers=none]{#1}}
+\newcommand{\termsrc}[1]{\VerbatimInput[frame=single,rulecolor=\color{black},formatcom=\color{RoyalBlue},numbers=none]{#1}}
 \DefineVerbatimEnvironment{code}{Verbatim}{frame=single,rulecolor=\color{black},formatcom=\color{OliveGreen},numbers=none,commandchars=\\\{\}}
-\DefineVerbatimEnvironment{console}{Verbatim}{frame=single,rulecolor=\color{black},formatcom=\color{RoyalBlue},numbers=none,commandchars=\\\{\}}
+\DefineVerbatimEnvironment{term}{Verbatim}{frame=single,rulecolor=\color{black},formatcom=\color{RoyalBlue},numbers=none,commandchars=\\\{\}}
 
 \title{QMCPACK User Documentation}
 \author{UIUC Electronic Structure Group}
