--- a/trunk/docs/usrdoc/qmcpack-u.bib
+++ b/trunk/docs/usrdoc/qmcpack-u.bib
@@ -22,7 +22,7 @@
 
 @ARTICLE{PhysRev.138.A442,
   author = {McMillan, W. L.},
-  title = {Ground State of Liquid $He4$},
+  title = {Ground State of Liquid He-4},
   journal = {Phys. Rev.},
   year = {1965},
   volume = {138},
@@ -34,6 +34,47 @@
   owner = {iibewegung},
   publisher = {American Physical Society},
   timestamp = {2010.05.21}
+}
+
+@Article{Jeziorska2007,
+  title = {Pair potential for helium from symmetry-adapted perturbation theory calculations and from supermolecular data},
+  author = {M. Jeziorska et al.},
+  journal = {J.~Chem.~Phys.},
+  volume = {127},
+  pages = {124303},
+  year = {2007}
+}
+
+@Article{Aziz1979,
+  title = {An accurate intermolecular potential for helium},
+  author = {R.~A. Aziz et al.},
+  journal = {J.~Chem.~Phys.},
+  volume = {70},
+  pages = {4330},
+  year = {1979}
+}
+
+@Article{Aziz1987,
+  title = {A new determination of the ground state interatomic potential for $\text{He}_2$},
+  author = {R.~A. Aziz and F.~R.~W. McCourt and C.~C.~.K. Wong},
+  journal = {Mol.~Phys.},
+  volume = {61},
+  pages = {1487},
+  year = {1987}
+}
+
+@Article{PhysRevA.9.2178,
+  title = {Helium at zero temperature with hard-sphere and other forces},
+  author = {Kalos, M. H. and Levesque, D.  and Verlet, L. },
+  journal = {Phys. Rev. A},
+  volume = {9},
+  number = {5},
+  pages = {2178--2195},
+  numpages = {17},
+  year = {1974},
+  month = {May},
+  doi = {10.1103/PhysRevA.9.2178},
+  publisher = {American Physical Society}
 }
 
 @INBOOK{Ceperley1979,
@@ -102,3 +143,10 @@
   timestamp = {2010.05.25}
 }
 
+@Book{Thijssen2007,
+	year = {2007},
+	author = {J.~M. Thijssen},
+	edition = {2nd},
+	publisher = {Cambridge University Press},
+	title = {{Computational Physics}}
+}
