--- a/trunk/docs/usrdoc/qmcpack-u-gs.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-gs.tex
@@ -26,7 +26,7 @@ qmcpack-read-only/
 %can pretty much copy the svn instructions from google code
 \section{Building QMCPACK}
 The aim of this section is to provide a guideline for building QMCPACK in the most generic way.
-A compromise must be made between overly many case-by-case examples and a simplified procedure.
+A compromise must be made between overly many case-by-case examples and an oversimplified procedure.
 
 %Theoretically speaking, 
 QMCPACK can be used on any *nix machine with C++ compilers that are reasonably recent.  Some examples to date are g++ $\geq 4.2$ (GNU) and icc $\geq 10.1$ (Intel).  There are other required packages which the compilation process will point out if missing.  Listed below are those required specifically by QMCPACK, with the oldest tested versions.
@@ -176,133 +176,145 @@ If LAPACK/BLAS or ATLAS is not in your library search path, set the environment 
 
 \subsection{Configurations known to work}
 \subsubsection{Intel 64 Abe cluster @ NCSA}
-Abe uses SoftEnv to activate the configurations for the (otherwise dormant) software installed in it.  Create the file .soft in the home directory, containing the following lines:
+Abe uses SoftEnv to activate the configurations for the (otherwise dormant) software installed in it.  Create the file .soft in the home directory, containing the following lines:\footnote{These settings were checked and confirmed to work on July 22, 2010.  NCSA unfortunately is an ever-experimental cluster which frequently installs new software and deletes old ones without notice.  If you find that these settings no longer work, contact \href{mailto:dcyang2@illinois.edu}{ChangMo Yang}.}
 \begin{term}
-@default
-@boost-1.42.0
-@teragrid-basic
-+intel-mkl
-+libxml2
+@remove +cmake-2.6.3
+@remove +intel-10.1.017
+@remove +hdf5-1.6.7
+@remove +phdf5-1.6.7
++cmake-2.8.1
++intel-11.1.072
++intel-mkl-10.2.2
 +hdf5-1.8.4
++fftw-3.1-intel
++libxml2
+@default
+@teragrid-basic
 \end{term}
-Set the following environment variables:
+Also needed are the packages \href{http://www.boost.org/}{Boost} and \href{http://einspline.sourceforge.net/}{Einspline}.  They are to be installed locally, ie. usually under your home directory \iterm{\$\{HOME\}}.  Refer to their websites for further download and installation instructions.  After they are correctly installed set the following environment variables, using either the \iterm{export} or the \iterm{setenv} command depending on the shell:
 \begin{term}
 CXX=mpicxx
-CC=icc
-LIBXML2\_HOME=/usr/local/libxml2-2.6.29
-QMC\_BITS=64
-QMC\_OMP=1
+CC=mpicc
+LIBXML2_HOME=/usr/local/libxml-2.6.32
+BOOST_HOME=\$\{HOME\}/include
+EINSPLINE_HOME=\$\{HOME\}
+HDF5_API=16
+QMC_BITS=64
+QMC_MPI=1
+QMC_OMP=1
 \end{term}
 
 \subsubsection{Intel Mac OS X}
-[I can try this on my laptop, with MacPorts]
+There are two Linux-style package management systems for Intel-based Mac computers: \href{http://www.macports.org/}{MacPorts} and \href{http://www.finkproject.org/}{Fink}.  We only list the packages and environment settings that are needed to compile QMCPACK.\footnote{Building from the source is perfectly acceptable.}  Note that once CMake is installed, it will use the Mac Framework and link the libraries automatically.
+\paragraph{MacPorts}
+\subparagraph{Ports} cmake, gcc44, atlas, boost, svn, hdf5-18, libxml2, fftw-3, zlib
+\subparagraph{Environment variables}
+\begin{term}
+HDF5_API=16
+\end{term}
 
-Basic steps
+\paragraph{Fink}
+\subparagraph{Packages} cmake, hdf5, libxml2, svn, boost
+\begin{term}
+HDF5_HOME=/sw
+LIBXML2_HOME=/sw
+\end{term}
+%For the Boost package, set \iterm{BOOST\_HOME} to the directory where the package was decompressed.  There is no compiling involved.
+%[edit] Few facts
+%    * Do not install lapack/blas via fink or port
+%[edit] Extras
+%    * The performance of plane-wave depends on blas library. Framework or GotoBlas do not perform as well as MKL.
+%    * If Intel compilers and MKL are available, set the environments as 
+%\begin{verbatim}
+%export CXX=icpc
+%export CC=icc
+%export MKL_HOME=/Library/Frameworks/Intel_MKL.framework/Versions/Current
+%\end{verbatim}
+%    * Then, cmake/make
+Also check \iterm{DYLD\_LIBRARY\_PATH}. Add the lines below (replace \iterm{32} with \iterm{64} for 64 bit OS) in the shell startup.
 
-    * Install cmake and hdf5 via fink (building from source is perfectly acceptable)
-          o Set HDF5\_HOME as
-
-\begin{verbatim}
-            export HDF5_HOME=/sw
-\end{verbatim}
-
-    * libxml2 is most likely in the standard paths, i.e., /usr/include and /usr/lib
-          o Otherwise, use fink and set
-
-\begin{verbatim}
-            export LIBXML2_HOME=/sw
-\end{verbatim}
-
-    * Download and unpack boost
-          o Set BOOST\_HOME to the directory name (full path) of the boost package 
-
-[edit] Few facts
-
-    * Do not install lapack/blas via fink or port
-    * cmake will use Mac Framework and link the libraries automatically 
-
-[edit] Extras
-
-    * The performance of plane-wave depends on blas library. Framework or GotoBlas do not perform as well as MKL.
-    * If Intel compilers and MKL are available, set the environments as 
-
-\begin{verbatim}
-export CXX=icpc
-export CC=icc
-export MKL_HOME=/Library/Frameworks/Intel_MKL.framework/Versions/Current
-\end{verbatim}
-
-    * Then, cmake/make
-    * Check DYLD\_LIBRARY\_PATH. Add the lines below (32->64 for 64bit OS) in the shell 
-
-\begin{verbatim}
-if [ -z "${LD_LIBRARY_PATH}" ]
+\begin{term}
+if [ -z "\$\{LD_LIBRARY_PATH\}" ]
 then
-  LD_LIBRARY_PATH=$MKL_HOME/lib/32; export LD_LIBRARY_
+  LD_LIBRARY_PATH=\$MKL_HOME/lib/32; export LD_LIBRARY_
 PATH
 else
-  LD_LIBRARY_PATH=$MKL_HOME/lib/32:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+  LD_LIBRARY_PATH=\$MKL_HOME/lib/32:\$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
 fi
 
-if [ -z "${DYLD_LIBRARY_PATH}" ]
+if [ -z "\$\{DYLD_LIBRARY_PATH\}" ]
 then
-  DYLD_LIBRARY_PATH=$MKL_HOME/lib/32:; export DYLD_LIBRARY_PATH
+  DYLD_LIBRARY_PATH=\$MKL_HOME/lib/32; export DYLD_LIBRARY_PATH
 else
-  DYLD_LIBRARY_PATH=$MKL_HOME/lib/32:$DYLD_LIBRARY_PATH; export DYLD_LIBRARY_PATH
+  DYLD_LIBRARY_PATH=\$MKL_HOME/lib/32:\$DYLD_LIBRARY_PATH; export DYLD_LIBRARY_PATH
 fi
-\end{verbatim}
+\end{term}
 
 \subsection{Tested environments}
 QMCPACK is developed for large-scale high-performance computing systems. We update the status of QMCPACK on the HPC systems the developers have access to and share experiences in dealing with some quirkiness of each system.
 
-In general, the quickest way to build and use QMCPACK is to use a toolchain file for each system. They are available in config directory with the distribution. Current list includes
+In general, the quickest way to build and use QMCPACK is to use a toolchain file for each system. They are available in \iterm{config} directory with the distribution. The current list includes
 \begin{itemize*}
-\item{} AbeMvapich2.20091104.cmake : abe@ncsa
+\item{} AbeMvapich2.20091104.cmake : Abe @ NCSA
 \item{} AbeMvapich2.cmake
+\item{} AbeMvapich\_CUDA.cmake
 \item{} AbeOpenMPI.cmake
 \item{} BGToolChain.cmake : BlueGeneP
+\item{} BlueBioU.cmake
+\item{} BlueDrop.cmake
 \item{} BluePrintXL.cmake : BluePrint@ncsa, IBM P5
+\item{} CrayXTEnv.cmake
+\item{} I7IntelMPI.cmake
+\item{} IBMP5p.cmake
 \item{} JaguarGNU.cmake : jaguar@ornl, Cray XT
 \item{} KrakenGNU.cmake : kraken@nics, Cray XT
-\item{} LinuxIntel.cmake : generic for LINUX using Intel compilers
+\item{} KrakenPGI.cmake
 \item{} LOP6\_xlC\_xlc.cmake : huygens@sara, IBM P6, running LINUX, IBM XL compilers
 \item{} LOP6\_xlC\_gcc.cmake : huygens@sara, IBM P6, running LINUX, IBM XLC compiler and GNU C compiler
+\item{} LinuxIntel.cmake : generic for LINUX using Intel compilers
+\item{} Longhorn.cmake
+\item{} Longhorn\_CUDA.cmake
+\item{} Perovskite.cmake
+\item{} SaraGNU.cmake
+\item{} SaraMPCC.cmake
 \end{itemize*}
-Once a toolchain file (mychain.cmake)  is selected,
-\begin{verbatim}
+From the top directory of QMCPACK, we can configure the build environment according to the chosen toolchain (eg. \iterm{mychain.cmake}) as follows.
+\begin{term}
 cd build
 cmake -DCMAKE_TOOLCHAIN_FILE=../config/mychain.cmake ..
 cmake -DCMAKE_TOOLCHAIN_FILE=../config/mychain.cmake ..
 make
-\end{verbatim}
-Feel free to make a local copy in build directory and modify it for your environment. For each platform, only the paths to the external libraries have to be modified. Where the toolchain file is located is not important.
+\end{term}
+%Feel free to make a local copy in build directory and modify it for your environment.
+% Where the toolchain file is located is not important.
+If you choose to modify any of the existing toolchain files for your environment, only the paths to the external libraries have to be modified for each platform.
 
-\subsubsection{Cygwin}
-Update qmcpack using svn, especially src/CMakeLists.txt
- Summary
-
-    * cygwin 1.5.25-7
-    * GCC 3.4.4 
-
- Libraries
-
-    * cmake : cygwin update
-    * libxml2 : cygwin update
-          o Set LIBXML2\_HOME=/usr/include/libxml2 
-    * boost : select boost-devel using cygwin update
-          o Set BOOST\_HOME=/usr/include/boost-1\_33\_1
-          o Or search the directory where boost/config.hpp resides 
-    * HDF5
-          o download source from HDF5 home page:
-            wget ftp://ftp.hdfgroup.org/HDF5/current16/src/hdf5-1.6.7.tar.gz
-                + Do not use version 1.8.x. 
-          o unpack:
-            tar zxf hdf5-1.6.7.tar.gz
-          o configure and make:
-            cd hdf5-1.6.7; ./configure --prefix=/usr/local; make; make install
-          o Set HDF5\_HOME=/usr/local 
+\subsubsection{Cygwin [clean this]}
+Update qmcpack using svn, especially src/CMakeLists.txt.
+\paragraph{Summary}
+\begin{itemize}
+\item{} cygwin 1.5.25-7
+\item{} GCC 3.4.4 
+\end{itemize}
+\paragraph{Libraries}
+\begin{itemize}
+\item{} cmake
+\item{} libxml2 : Set \iterm{LIBXML2\_HOME=/usr/include/libxml2}
+\item{} boost : select boost-devel using cygwin update.
+\begin{itemize}
+\item{} Set BOOST\_HOME=/usr/include/boost-1\_33\_1
+\item{} Or search the directory where boost/config.hpp resides 
+\end{itemize}
+\item{} HDF5
+\begin{itemize}
+\item{} Download source version 1.6.x (not 1.8.x) from the HDF5 home page.
+\item{} After installation, set \iterm{HDF5\_HOME=/usr/local}
+\end{itemize}
+\end{itemize}
 
 \subsection{Known version conflicts}
+None considered so far.
+
 \section{A walk-through example with Si}
 I guess Jaron knows more about this...
 \subsection{Input file layout}
