--- a/trunk/docs/usrdoc/qmcpack-u-gs.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-gs.tex
@@ -1,11 +1,26 @@
 \chapter{Getting Started}
+QMCPACK is written in C++. It is designed for massively parallel computers and
+optimized for multi/many-core architectures.  It employs MPI/OpenMP hybrid
+programming model for parallel executions. QMCPACK is being actively developed
+by and for the QMC community and therefore this document may not reflect the most
+updated status of QMCPACK and may contain inaccurate information.
+Consult http://qmcpack.cmscc.org (wiki) and  http://qmcpack.googlecode.com/ (code
+repository)  for current information including contact information, bug reports, etc. 
 %developer contact info here (Jeongnim? or all of us?)
 \section{Obtaining QMCPACK}
-QMCPACK is written in C++ and is currently under the New BSD License.  Due to its incomplete compliance with the current ISO C++ standard, it is not released in cross-compilable packages.  It is instead obtained from its source code repository hosted by Google Code.  As described in project website at http://code.google.com/p/qmcpack/, the latest revision of the code can be checked out anonymously using Subversion, with the command
+%QMCPACK is written in C++ and is currently under the New BSD License.  Due to
+%its incomplete compliance with the current ISO C++ standard, it is not released
+%in cross-compilable packages.  It is instead obtained from its source code
+%repository hosted by Google Code. http://code.google.com/p/qmcpack/, 
+The latest revision of the code can
+be checked out anonymously using Subversion, with the command
 \begin{term}
 svn checkout http://qmcpack.googlecode.com/svn/trunk/ qmcpack-read-only
 \end{term}
-where the local directory name \icode{qmcpack-read-only} can be changed as needed.  The repository forbids anonymous users (ie. nonmembers of the project) from committing changes to the code.  The above command will create a directory \icode{qmcpack-read-only} (topdir) which contains
+where the local directory name \icode{qmcpack-read-only} can be changed as
+needed.  The repository forbids anonymous users (ie. nonmembers of the project)
+from committing changes to the code.  The above command will create a directory
+\icode{qmcpack-read-only} (topdir) which contains
 \begin{verbatim} 
 qmcpack-read-only/
   CMakeLists.txt
@@ -25,24 +40,37 @@ qmcpack-read-only/
 
 %can pretty much copy the svn instructions from google code
 \section{Building QMCPACK}
-The aim of this section is to provide a guideline for building QMCPACK in the most generic way.
-A compromise must be made between overly many case-by-case examples and an oversimplified procedure.
+%The aim of this section is to provide a guideline for building QMCPACK in the
+%most generic way.  A compromise must be made between overly many case-by-case
+%examples and an oversimplified procedure.
 
 %Theoretically speaking, 
-QMCPACK can be used on any *nix machine with C++ compilers that are reasonably recent.  Some examples to date are g++ $\geq 4.2$ (GNU) and icc $\geq 10.1$ (Intel).  There are other required packages which the compilation process will point out if missing.  Listed below are those required specifically by QMCPACK, with the oldest tested versions.
+QMCPACK can be used on any *nix machine with C++ compilers that are reasonably
+recent.  Some examples to date are g++ $\geq 4.2$ (GNU) and icc $\geq 10.1$
+(Intel).  It uses cmake to build internal libraries and QMC applications.
+There are other required packages which the compilation process will
+point out if missing.  Listed below are those required specifically by QMCPACK,
+with the oldest tested versions.
 \begin{itemize*}
 \item{} CMake $\geq 2.8$
-\item{} mpich, mvapich or openmpi
-\item{} blas or lapack library (provided as mkl in Intel compilers)
+\item{} MPI library
+\item{} blas and lapack library
 \item{} boost library
 \item{} fftw library $\geq 3$
 \item{} xml2 library
-\item{} hdf5 library $\geq 1.8$
-\item{} pygtkglext: OpenGl extensions for Python GTK bindings for the GUI interface.
+\item{} hdf5 library $\geq 1.6$
+%\item{} pygtkglext: OpenGl extensions for Python GTK bindings for the GUI interface.
 % This package has some dependencies.
 \end{itemize*}
-For library packages, their full development versions (with suffixes -dev or -devel) are needed.  No additional environment variables need to be set if the above packages are installed from precompiled binaries.\footnote{Typical examples are rpm or deb packages.}  If instead the libraries are locally built, their installation directories must be explicitly set as environment variables, eg. \icode{LIBXML2\_HOME=/usr/local}.  See the installation notes in each package for details.  On many HPC centers, these packages are managed by utilities like module and softenv.  Again, see the documentation on each site for details.
-
+For library packages, their full development versions (with suffixes -dev or
+-devel) are needed.  No additional environment variables need to be set if the
+above packages are installed from precompiled binaries.\footnote{Typical
+examples are rpm or deb packages.}  If instead the libraries are locally built,
+their installation directories must be explicitly set as environment variables,
+eg. \icode{LIBXML2\_HOME=/usr/local}.  See the installation notes in each
+package for details.  On many HPC centers, these packages are managed by
+utilities like \icode{module} and \icode{softenv}.  Again, see the
+documentation on each site for details.
 % recent [meaning $> 4.2$ at least] GNU
 %Compiling the QMCPACK source requires the CMake package.
 %For cmake documentation and guides, consult cmake wiki.
@@ -108,12 +136,13 @@ SET(QMC_MPI 0)
 \end{itemize*}
 \textbf{Note}: Shell environment variables take precedence over CMake settings.
 
-\paragraph{Multithreading}
-OpenMP is disabled by default in \iterm{CMakeLists.txt} but is automatically enabled if CMake detects that these compilers are being used:
+\paragraph{OpenMP}
+Multithreading with OpenMP is automatically enabled if CMake detects that a compiler
+support OpenMP. These compilers have been extensively tested for OpenMP:
 \begin{itemize*}
+  \item{} GNU/OpenMP compilers $>$ 4.2.x on Linux 2.6.x kernels, Mac OS X 
   \item{} Intel compilers
   \item{} IBM VisualAge compilers
-  \item{} GNU/OpenMP compilers $>$ 4.2.x on Linux 2.6.x kernels, Mac OS X 
 \end{itemize*}
 To enable OpenMP for other compilers, one of the following actions will be needed:
 \begin{itemize*}
@@ -124,44 +153,42 @@ SET(QMC_OMP 1)
   \item{} Set \icode{QMC\_OMP} to 1, eg. \icode{export QMC\_OMP=1} for bash.
 \end{itemize*}
 
-[check this] If your machine has multiple cores, there is no need to disable OpenMP.  However, make sure to set the environment variables which control OpenMP runs.  Especially with MKL, set
+If your machine has multiple cores, there is no need to disable OpenMP.
+Note that the default number of threads on your machine may be set to the
+number of cores (or CPU units). It is always safe to set the number of threads
+yourself as, for example, 
+\begin{code}
+export OMP_NUM_THREADS=1
+\end{code}
+It is important to set the  environment variables which control underlying
+libraries that can utilize OpenMP or any other threading methods.  Especially
+with MKL, set
 \begin{code}
 MKL_NUM_THREADS=1
 MKL_SERIAL=YES
 \end{code}
 so that the blas/lapack calls DO NOT USE threaded version.
 
-Note that the default number of threads on your machine may be set to the number of cores (or CPU units). It is always safe to set the number of threads yourself as, for example,
-\begin{code}
-export OMP_NUM_THREADS=1
-\end{code}
-
 %More on cmake
 %cmake environment variables
-In addition to \icode{QMC\_MPI} and \icode{QMC\_OMP}, there are few more environment variables used by QMCPACK and CMake to determine compiler-time options. \icode{QMC\_COMPLEX} (0 or 1) sets wavefunctions to take real or complex values.\footnote{One can use real wavefunction for the complex-enabled build but it will be extremely inefficient (4-8 times slower). However, complex wavefunctions cannot be used with real-enabled build.}  \icode{QMC\_BITS} (32 or 64) sets the OS bit size.  A change in any one of these variables will cause Make to rebuild everything instead of rebuilding just the modified source files.
+In addition to \icode{QMC\_MPI} and \icode{QMC\_OMP}, there are few more
+environment variables used by QMCPACK and CMake to determine compiler-time
+options. \icode{QMC\_COMPLEX} (0 or 1) sets wavefunctions to take real or
+complex values.\footnote{One can use real wavefunction for the complex-enabled
+build but it will be extremely inefficient (4-8 times slower). However, complex
+wavefunctions cannot be used with real-enabled build.}  \icode{QMC\_BITS} (32
+or 64) sets the OS bit size.  A change in any one of these variables will cause
+Make to rebuild everything instead of rebuilding just the modified source
+files.
 %Each build should use identical variables. If the working shell has different variables from the previous build environments, cmake/make will rebuild everything which can take time. Out-of-source compilation becomes very useful to build different combinations.
 %Note that separate executables have to be built for real and complex wavefunctions.  
 
-%\subsection{Library dependencies}
-%\subsection{Required utilities and libraries}
-%In order to install QMCPACK, users have to install several required packages. These packages are included in standard Linux/cygwin distributions or can be downloaded by following the links. If these libraries are installed in standard directories, /usr /usr/local and /sw (Mac), no action is necessary. Alternatively, environment variables XYZ\_HOME should be set. Here, XYZ stands for the name of package; the build utility can locate the libraries and use them.
-
-%With few exceptions, the build utility cmake will look for XYZ\_HOME/include for the header files and XYZ\_HOME/lib for the library files. When multiple environment variables apply to a library, e.g., blas/lapack, the library is searched according to the listed order. 
-%intel mkl, gsl, boost, mpich/openmpi, openmp, cuda, etc.
-%\begin{itemize}
-%\item{} cmake   utility                 source and binary distribution on multiple platforms
-%\item{} blas/lapack     Numerical library       MKL\_HOME, LAPACK, ATLAS         Alternatives: vendor-provided blas, e.g., ESSL
-%\item{} hdf5    I/O     HDF5\_HOME, HDF\_HOME     source and binary distribution on multiple platforms
-%\item{} libxml2         I/O     LIBXML2\_HOME    Standard library for Linux distributions
-%\item{} boost   C++ standard libraries  BOOST\_HOME      Using only the header files. No need to compile anything. Simply download and unpack the package.
-%\item{} einspline       c library for 3D bspline        see Using Einspline library     
-%\item{} fftw    c library for FFT       FFTW\_HOME       http://www.fftw.org/
-%
-%\end{itemize}
-
-\paragraph{Numerical Libraries}
-%If lapack/blas or atlas is not in your standard path, do one of the following. ``location'' is where the libraries are located.
-If LAPACK/BLAS or ATLAS is not in your library search path, set the environment variables \icode{LAPACK} to \icode{"-L/installdir -llapack -lblas"} and \icode{ATLAS} to\\ \icode{"-L/installdir -llapack -lf77blas -lcblas -latlas"}, changing \iterm{installdir} appropriately.
+%\paragraph{External libraries}
+%%If lapack/blas or atlas is not in your standard path, do one of the following. ``location'' is where the libraries are located.
+%If LAPACK/BLAS or ATLAS is not in your library search path, set the environment
+%variables \icode{LAPACK} to \icode{"-L/installdir -llapack -lblas"} and
+%\icode{ATLAS} to\\ \icode{"-L/installdir -llapack -lf77blas -lcblas -latlas"},
+%changing \iterm{installdir} appropriately.
 
 %For bash users,
 %\begin{verbatim}
@@ -173,112 +200,102 @@ If LAPACK/BLAS or ATLAS is not in your library search path, set the environment 
 % setenv LAPACK "-L/location -llapack -lblas"
 % setenv ATLAS "-L/location -llapack -lf77blas -lcblas -latlas"
 %\end{verbatim}
-
-\subsection{Configurations known to work}
-\subsubsection{Intel 64 Abe cluster @ NCSA}
-Abe uses SoftEnv to activate the configurations for the (otherwise dormant) software installed in it.  Create the file .soft in the home directory, containing the following lines:\footnote{These settings were checked and confirmed to work on July 22, 2010.  NCSA unfortunately is an ever-experimental cluster which frequently installs new software and deletes old ones without notice.  If you find that these settings no longer work, contact \href{mailto:dcyang2@illinois.edu}{ChangMo Yang}.}
-\begin{term}
-@remove +cmake-2.6.3
-@remove +intel-10.1.017
-@remove +hdf5-1.6.7
-@remove +phdf5-1.6.7
-+cmake-2.8.1
-+intel-11.1.072
-+intel-mkl-10.2.2
-+hdf5-1.8.4
-+fftw-3.1-intel
-+libxml2
-@default
-@teragrid-basic
-\end{term}
-Also needed are the packages \href{http://www.boost.org/}{Boost} and \href{http://einspline.sourceforge.net/}{Einspline}.  They are to be installed locally, ie. usually under your home directory \iterm{\$\{HOME\}}.  Refer to their websites for further download and installation instructions.  After they are correctly installed set the following environment variables, using either the \iterm{export} or the \iterm{setenv} command depending on the shell:
-\begin{term}
-CXX=mpicxx
-CC=mpicc
-LIBXML2_HOME=/usr/local/libxml-2.6.32
-BOOST_HOME=\$\{HOME\}/include
-EINSPLINE_HOME=\$\{HOME\}
-HDF5_API=16
-QMC_BITS=64
-QMC_MPI=1
-QMC_OMP=1
-\end{term}
-
-\subsubsection{Intel Mac OS X}
-There are two Linux-style package management systems for Intel-based Mac computers: \href{http://www.macports.org/}{MacPorts} and \href{http://www.finkproject.org/}{Fink}.  We only list the packages and environment settings that are needed to compile QMCPACK.\footnote{Building from the source is perfectly acceptable.}  Note that once CMake is installed, it will use the Mac Framework and link the libraries automatically.
-\paragraph{MacPorts}
-\subparagraph{Ports} cmake, gcc44, atlas, boost, svn, hdf5-18, libxml2, fftw-3, zlib
-\subparagraph{Environment variables}
-\begin{term}
-HDF5_API=16
-\end{term}
-
-\paragraph{Fink}
-\subparagraph{Packages} cmake, hdf5, libxml2, svn, boost
-\begin{term}
-HDF5_HOME=/sw
-LIBXML2_HOME=/sw
-\end{term}
-%For the Boost package, set \iterm{BOOST\_HOME} to the directory where the package was decompressed.  There is no compiling involved.
-%[edit] Few facts
-%    * Do not install lapack/blas via fink or port
-%[edit] Extras
-%    * The performance of plane-wave depends on blas library. Framework or GotoBlas do not perform as well as MKL.
-%    * If Intel compilers and MKL are available, set the environments as 
-%\begin{verbatim}
-%export CXX=icpc
-%export CC=icc
-%export MKL_HOME=/Library/Frameworks/Intel_MKL.framework/Versions/Current
-%\end{verbatim}
-%    * Then, cmake/make
-Also check \iterm{DYLD\_LIBRARY\_PATH}. Add the lines below (replace \iterm{32} with \iterm{64} for 64 bit OS) in the shell startup.
-
-\begin{term}
-if [ -z "\$\{LD_LIBRARY_PATH\}" ]
-then
-  LD_LIBRARY_PATH=\$MKL_HOME/lib/32; export LD_LIBRARY_
-PATH
-else
-  LD_LIBRARY_PATH=\$MKL_HOME/lib/32:\$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-fi
-
-if [ -z "\$\{DYLD_LIBRARY_PATH\}" ]
-then
-  DYLD_LIBRARY_PATH=\$MKL_HOME/lib/32; export DYLD_LIBRARY_PATH
-else
-  DYLD_LIBRARY_PATH=\$MKL_HOME/lib/32:\$DYLD_LIBRARY_PATH; export DYLD_LIBRARY_PATH
-fi
-\end{term}
+%%JNKIM COMMENTED OUT: too tedious
+%%\subsection{Configurations known to work}
+%%\subsubsection{Intel 64 Abe cluster @ NCSA}
+%%Abe uses SoftEnv to activate the configurations for the (otherwise dormant) software installed in it.  Create the file .soft in the home directory, containing the following lines:\footnote{These settings were checked and confirmed to work on July 22, 2010.  NCSA unfortunately is an ever-experimental cluster which frequently installs new software and deletes old ones without notice.  If you find that these settings no longer work, contact \href{mailto:dcyang2@illinois.edu}{ChangMo Yang}.}
+%%\begin{term}
+%%@remove +cmake-2.6.3
+%%@remove +intel-10.1.017
+%%@remove +hdf5-1.6.7
+%%@remove +phdf5-1.6.7
+%%+cmake-2.8.1
+%%+intel-11.1.072
+%%+intel-mkl-10.2.2
+%%+hdf5-1.8.4
+%%+fftw-3.1-intel
+%%+libxml2
+%%@default
+%%@teragrid-basic
+%%\end{term}
+%%Also needed are the packages \href{http://www.boost.org/}{Boost} and \href{http://einspline.sourceforge.net/}{Einspline}.  They are to be installed locally, ie. usually under your home directory \iterm{\$\{HOME\}}.  Refer to their websites for further download and installation instructions.  After they are correctly installed set the following environment variables, using either the \iterm{export} or the \iterm{setenv} command depending on the shell:
+%%\begin{term}
+%%CXX=mpicxx
+%%CC=mpicc
+%%LIBXML2_HOME=/usr/local/libxml-2.6.32
+%%BOOST_HOME=\$\{HOME\}/include
+%%EINSPLINE_HOME=\$\{HOME\}
+%%HDF5_API=16
+%%QMC_BITS=64
+%%QMC_MPI=1
+%%QMC_OMP=1
+%%\end{term}
+%%
+%%\subsubsection{Intel Mac OS X}
+%%There are two Linux-style package management systems for Intel-based Mac computers: \href{http://www.macports.org/}{MacPorts} and \href{http://www.finkproject.org/}{Fink}.  We only list the packages and environment settings that are needed to compile QMCPACK.\footnote{Building from the source is perfectly acceptable.}  Note that once CMake is installed, it will use the Mac Framework and link the libraries automatically.
+%%\paragraph{MacPorts}
+%%\subparagraph{Ports} cmake, gcc44, atlas, boost, svn, hdf5-18, libxml2, fftw-3, zlib
+%%\subparagraph{Environment variables}
+%%\begin{term}
+%%HDF5_API=16
+%%\end{term}
+%%
+%%\paragraph{Fink}
+%%\subparagraph{Packages} cmake, hdf5, libxml2, svn, boost
+%%\begin{term}
+%%HDF5_HOME=/sw
+%%LIBXML2_HOME=/sw
+%%\end{term}
+%%%For the Boost package, set \iterm{BOOST\_HOME} to the directory where the package was decompressed.  There is no compiling involved.
+%%%[edit] Few facts
+%%%    * Do not install lapack/blas via fink or port
+%%%[edit] Extras
+%%%    * The performance of plane-wave depends on blas library. Framework or GotoBlas do not perform as well as MKL.
+%%%    * If Intel compilers and MKL are available, set the environments as 
+%%%\begin{verbatim}
+%%%export CXX=icpc
+%%%export CC=icc
+%%%export MKL_HOME=/Library/Frameworks/Intel_MKL.framework/Versions/Current
+%%%\end{verbatim}
+%%%    * Then, cmake/make
+%%Also check \iterm{DYLD\_LIBRARY\_PATH}. Add the lines below (replace \iterm{32} with \iterm{64} for 64 bit OS) in the shell startup.
+%%
+%%\begin{term}
+%%if [ -z "\$\{LD_LIBRARY_PATH\}" ]
+%%then
+%%  LD_LIBRARY_PATH=\$MKL_HOME/lib/32; export LD_LIBRARY_
+%%PATH
+%%else
+%%  LD_LIBRARY_PATH=\$MKL_HOME/lib/32:\$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+%%fi
+%%
+%%if [ -z "\$\{DYLD_LIBRARY_PATH\}" ]
+%%then
+%%  DYLD_LIBRARY_PATH=\$MKL_HOME/lib/32; export DYLD_LIBRARY_PATH
+%%else
+%%  DYLD_LIBRARY_PATH=\$MKL_HOME/lib/32:\$DYLD_LIBRARY_PATH; export DYLD_LIBRARY_PATH
+%%fi
+%%\end{term}
 
 \subsection{Tested environments}
 QMCPACK is developed for large-scale high-performance computing systems. We update the status of QMCPACK on the HPC systems the developers have access to and share experiences in dealing with some quirkiness of each system.
 
-In general, the quickest way to build and use QMCPACK is to use a toolchain file for each system. They are available in \iterm{config} directory with the distribution. The current list includes
+In general, the quickest way to build and use QMCPACK is to use a toolchain
+file for each system. They are available in \iterm{config} directory with the
+distribution. We recommend using cmake 2.8.x or higher on each HPC system. They are usually
+available via \icode{module} or \icode{softenv}. 
+The current list includes
 \begin{itemize*}
-\item{} AbeMvapich2.20091104.cmake : Abe @ NCSA
-\item{} AbeMvapich2.cmake
-\item{} AbeMvapich\_CUDA.cmake
-\item{} AbeOpenMPI.cmake
-\item{} BGToolChain.cmake : BlueGeneP
-\item{} BlueBioU.cmake
-\item{} BlueDrop.cmake
-\item{} BluePrintXL.cmake : BluePrint@ncsa, IBM P5
-\item{} CrayXTEnv.cmake
-\item{} I7IntelMPI.cmake
-\item{} IBMP5p.cmake
+\item{} AbeMvapich2.20091104.cmake : abe@ncsa
+\item{} AbeMvapich\_CUDA.cmake : abe@ncsa, enable CUDA
 \item{} JaguarGNU.cmake : jaguar@ornl, Cray XT
 \item{} KrakenGNU.cmake : kraken@nics, Cray XT
-\item{} KrakenPGI.cmake
-\item{} LOP6\_xlC\_xlc.cmake : huygens@sara, IBM P6, running LINUX, IBM XL compilers
-\item{} LOP6\_xlC\_gcc.cmake : huygens@sara, IBM P6, running LINUX, IBM XLC compiler and GNU C compiler
+\item{} Longhorn.cmake : longhorn@tacc
+\item{} Longhorn\_CUDA.cmake : longhorn@tacc, enable CUDA
 \item{} LinuxIntel.cmake : generic for LINUX using Intel compilers
-\item{} Longhorn.cmake
-\item{} Longhorn\_CUDA.cmake
-\item{} Perovskite.cmake
-\item{} SaraGNU.cmake
-\item{} SaraMPCC.cmake
 \end{itemize*}
-From the top directory of QMCPACK, we can configure the build environment according to the chosen toolchain (eg. \iterm{mychain.cmake}) as follows.
+From the top directory of QMCPACK, we can configure the build environment
+according to the chosen toolchain (eg. \iterm{mychain.cmake}) as follows.
 \begin{term}
 cd build
 cmake -DCMAKE_TOOLCHAIN_FILE=../config/mychain.cmake ..
@@ -287,30 +304,32 @@ make
 \end{term}
 %Feel free to make a local copy in build directory and modify it for your environment.
 % Where the toolchain file is located is not important.
-If you choose to modify any of the existing toolchain files for your environment, only the paths to the external libraries have to be modified for each platform.
+If you choose to modify any of the existing toolchain files for your
+environment, only the paths to the external libraries have to be modified for
+each platform. 
 
-\subsubsection{Cygwin [clean this]}
-Update qmcpack using svn, especially src/CMakeLists.txt.
-\paragraph{Summary}
-\begin{itemize}
-\item{} cygwin 1.5.25-7
-\item{} GCC 3.4.4 
-\end{itemize}
-\paragraph{Libraries}
-\begin{itemize}
-\item{} cmake
-\item{} libxml2 : Set \iterm{LIBXML2\_HOME=/usr/include/libxml2}
-\item{} boost : select boost-devel using cygwin update.
-\begin{itemize}
-\item{} Set BOOST\_HOME=/usr/include/boost-1\_33\_1
-\item{} Or search the directory where boost/config.hpp resides 
-\end{itemize}
-\item{} HDF5
-\begin{itemize}
-\item{} Download source version 1.6.x (not 1.8.x) from the HDF5 home page.
-\item{} After installation, set \iterm{HDF5\_HOME=/usr/local}
-\end{itemize}
-\end{itemize}
+%\subsubsection{Cygwin [clean this]}
+%Update qmcpack using svn, especially src/CMakeLists.txt.
+%\paragraph{Summary}
+%\begin{itemize}
+%\item{} cygwin 1.5.25-7
+%\item{} GCC 3.4.4 
+%\end{itemize}
+%\paragraph{Libraries}
+%\begin{itemize}
+%\item{} cmake
+%\item{} libxml2 : Set \iterm{LIBXML2\_HOME=/usr/include/libxml2}
+%\item{} boost : select boost-devel using cygwin update.
+%\begin{itemize}
+%\item{} Set BOOST\_HOME=/usr/include/boost-1\_33\_1
+%\item{} Or search the directory where boost/config.hpp resides 
+%\end{itemize}
+%\item{} HDF5
+%\begin{itemize}
+%\item{} Download source version 1.6.x (not 1.8.x) from the HDF5 home page.
+%\item{} After installation, set \iterm{HDF5\_HOME=/usr/local}
+%\end{itemize}
+%\end{itemize}
 
 \subsection{Known version conflicts}
 None considered so far.
